# gpu-usage-ntfy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
deploy/systemd/: gpu-usage-ntfy.env.example  gpu-usage-ntfy.service
scripts/: collect-debug-bundle.sh  fix-common-issues.sh  install-systemd.sh  run-monitor.sh  tmux-start.sh  triage.sh  uninstall-systemd.sh
src/: app.rs  config.rs  gpu.rs  main.rs  notify.rs  policy.rs  timeutil.rs
